Update input username
type=email → type=text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <form action="friends.html" method="GET" id="login-form">
-        <input name="username" type="email" required placeholder="Email or phone number">
+        <input name="username" type="text" required placeholder="Email or phone number">
         <input name="password" type="password" required placeholder="password">
         <input type="submit" value="Log In">
         <a href="#">Find Kokoa Account or Password</a>
